--- a/frontend/web/uw/stylesheets/history.css
+++ b/frontend/web/uw/stylesheets/history.css
@@ -107,18 +107,25 @@
   background: #C59D17;
   margin: 50px auto;
 }
-/* line 100, ../sass/history.scss */
+@media screen and (max-width: 768px) {
+  /* line 101, ../sass/history.scss */
+  .history .history-header h1 {
+    font-size: 30px;
+    line-height: 35px;
+  }
+}
+/* line 106, ../sass/history.scss */
 .history .history-header p {
   color: #fff;
   font-size: 22px;
   font-style: italic;
   font-weight: bold;
 }
-/* line 106, ../sass/history.scss */
+/* line 112, ../sass/history.scss */
 .history .history-header .btn-wrap {
   padding: 80px 0;
 }
-/* line 109, ../sass/history.scss */
+/* line 115, ../sass/history.scss */
 .history .history-header .btn-down {
   position: relative;
   display: block;
@@ -131,37 +138,37 @@
   font-size: 17px;
   cursor: pointer;
 }
-/* line 120, ../sass/history.scss */
+/* line 126, ../sass/history.scss */
 .history .history-header .btn-down i {
   position: absolute;
   bottom: 2px;
   left: 50%;
   transform: translateX(-50%);
 }
-/* line 128, ../sass/history.scss */
+/* line 134, ../sass/history.scss */
 .history .history-content {
   padding-top: 80px;
 }
-/* line 130, ../sass/history.scss */
+/* line 136, ../sass/history.scss */
 .history .history-content img {
   display: block;
   width: 100%;
 }
-/* line 134, ../sass/history.scss */
+/* line 140, ../sass/history.scss */
 .history .history-content .urls {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-/* line 138, ../sass/history.scss */
+/* line 144, ../sass/history.scss */
 .history .history-content .urls li:not(:last-child) {
   margin-bottom: 5px;
 }
-/* line 141, ../sass/history.scss */
+/* line 147, ../sass/history.scss */
 .history .history-content .urls a {
   color: #00A2D6;
 }
-/* line 145, ../sass/history.scss */
+/* line 151, ../sass/history.scss */
 .history .history-content .urls::after {
   content: '';
   display: block;
@@ -170,7 +177,7 @@
   background: #C59D17;
   margin: 50px 0;
 }
-/* line 153, ../sass/history.scss */
+/* line 159, ../sass/history.scss */
 .history .history-content .btn-wrap .btn {
   font-size: 15px;
   border-radius: 0px;
@@ -179,7 +186,7 @@
   border-color: #C59D17;
   background: #C59D17;
 }
-/* line 162, ../sass/history.scss */
+/* line 168, ../sass/history.scss */
 .history .history-content .history-block h2 {
   margin-top: 50px;
   margin-bottom: 30px;
@@ -188,17 +195,17 @@
   color: #00A2D6;
   letter-spacing: 1px;
 }
-/* line 170, ../sass/history.scss */
+/* line 176, ../sass/history.scss */
 .history .history-content .history-block p {
   margin-bottom: 30px;
   font: 18px 'Proxima Nova Regular', sans-serif;
   line-height: 25px;
 }
-/* line 174, ../sass/history.scss */
+/* line 180, ../sass/history.scss */
 .history .history-content .history-block p strong {
   font-family: 'Proxima Nova Bl', sans-serif;
 }
-/* line 179, ../sass/history.scss */
+/* line 185, ../sass/history.scss */
 .history .history-content .h-t_with-imgR {
   display: -webkit-box;
   display: -moz-box;
@@ -207,17 +214,18 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
-/* line 187, ../sass/history.scss */
+/* line 194, ../sass/history.scss */
 .history .history-content .h-t_with-imgR > div:nth-child(1) {
   width: 42%;
 }
-/* line 190, ../sass/history.scss */
+/* line 197, ../sass/history.scss */
 .history .history-content .h-t_with-imgR > div:nth-child(2) {
   width: calc(55% + 50px);
   margin-right: -50px;
 }
-/* line 195, ../sass/history.scss */
+/* line 202, ../sass/history.scss */
 .history .history-content .h-t_with-imgL {
   display: -webkit-box;
   display: -moz-box;
@@ -228,15 +236,15 @@
   justify-content: space-between;
   margin-bottom: 30px;
 }
-/* line 204, ../sass/history.scss */
+/* line 211, ../sass/history.scss */
 .history .history-content .h-t_with-imgL > div:nth-child(1) {
   width: 50%;
 }
-/* line 207, ../sass/history.scss */
+/* line 214, ../sass/history.scss */
 .history .history-content .h-t_with-imgL > div:nth-child(2) {
   width: 48%;
 }
-/* line 211, ../sass/history.scss */
+/* line 218, ../sass/history.scss */
 .history .history-content .h-t_caption {
   display: block;
   max-width: 60%;
@@ -244,17 +252,17 @@
   font-family: 'Proxima Nova Light', sans-serif;
   font-style: italic;
 }
-/* line 218, ../sass/history.scss */
+/* line 225, ../sass/history.scss */
 .history .history-content .with-btn {
   position: relative;
 }
-/* line 220, ../sass/history.scss */
+/* line 227, ../sass/history.scss */
 .history .history-content .with-btn .btn {
   position: absolute;
   bottom: 15px;
   left: 15px;
 }
-/* line 225, ../sass/history.scss */
+/* line 232, ../sass/history.scss */
 .history .history-content .with-btn .btn.btn-warning {
   background: transparent;
   -webkit-border-radius: 0;
@@ -263,15 +271,15 @@
   border-color: #F3BA00;
   color: #F3BA00;
 }
-/* line 232, ../sass/history.scss */
+/* line 239, ../sass/history.scss */
 .history .history-content .with-btn .btn.btn-warning i {
   margin-left: 10px;
 }
-/* line 237, ../sass/history.scss */
+/* line 244, ../sass/history.scss */
 .history .history-content .purple-wrap {
   margin: 30px 0;
 }
-/* line 239, ../sass/history.scss */
+/* line 246, ../sass/history.scss */
 .history .history-content .purple-wrap .purple-block {
   position: relative;
   float: right;
@@ -280,7 +288,7 @@
   margin-right: -50px;
   border: 5px solid #3B1050;
 }
-/* line 246, ../sass/history.scss */
+/* line 253, ../sass/history.scss */
 .history .history-content .purple-wrap .purple-block ::before {
   content: 'i';
   display: block;
@@ -294,7 +302,7 @@
   border: 2px solid #3B1050;
   text-align: center;
 }
-/* line 259, ../sass/history.scss */
+/* line 266, ../sass/history.scss */
 .history .history-content .purple-wrap .purple-block p {
   margin-bottom: 0;
   font-weight: bold;
@@ -302,26 +310,26 @@
   font-size: 15px;
   line-height: 30px;
 }
-/* line 268, ../sass/history.scss */
+/* line 275, ../sass/history.scss */
 .history .history-content .purple-wrap::after {
   content: '';
   display: block;
   clear: both;
 }
-/* line 273, ../sass/history.scss */
+/* line 280, ../sass/history.scss */
 .history .history-content .only-img {
   margin: 30px -50px;
 }
-/* line 275, ../sass/history.scss */
+/* line 282, ../sass/history.scss */
 .history .history-content .only-img .btn {
   left: 50px;
 }
-/* line 278, ../sass/history.scss */
+/* line 285, ../sass/history.scss */
 .history .history-content .only-img .h-t_caption {
   margin-left: 50px;
   max-width: 55%;
 }
-/* line 283, ../sass/history.scss */
+/* line 290, ../sass/history.scss */
 .history .history-content .full-img {
   display: inline-block;
   width: 100%;
@@ -332,34 +340,34 @@
   background-size: cover;
   margin-bottom: 50px;
 }
-/* line 292, ../sass/history.scss */
+/* line 299, ../sass/history.scss */
 .history .history-content .full-img .full-img_caption {
   position: absolute;
   left: 0;
   right: 0;
   bottom: 30px;
 }
-/* line 299, ../sass/history.scss */
+/* line 306, ../sass/history.scss */
 .history .history-content .full-img::before {
   content: '';
   float: left;
   padding-top: 40%;
 }
-/* line 304, ../sass/history.scss */
+/* line 311, ../sass/history.scss */
 .history .history-content .slider_history {
   margin-bottom: 30px;
 }
-/* line 306, ../sass/history.scss */
+/* line 313, ../sass/history.scss */
 .history .history-content .slider_history .h-t_caption {
   max-width: 95%;
 }
-/* line 309, ../sass/history.scss */
+/* line 316, ../sass/history.scss */
 .history .history-content .slider_history .owl-dots {
   position: absolute;
   top: 82%;
   right: 30px;
 }
-/* line 314, ../sass/history.scss */
+/* line 321, ../sass/history.scss */
 .history .history-content .slider_history .owl-dot {
   display: inline-block;
   width: 12px;
@@ -370,25 +378,25 @@
   background: #F3B900;
   margin-right: 15px;
 }
-/* line 324, ../sass/history.scss */
+/* line 331, ../sass/history.scss */
 .history .history-content .slider_history .owl-dot:last-child {
   margin-right: 0;
 }
-/* line 327, ../sass/history.scss */
+/* line 334, ../sass/history.scss */
 .history .history-content .slider_history .owl-dot.active {
   background: #00A2D6;
 }
-/* line 331, ../sass/history.scss */
+/* line 338, ../sass/history.scss */
 .history .history-content .gallery-block2 {
   margin-bottom: 30px;
 }
-/* line 333, ../sass/history.scss */
+/* line 340, ../sass/history.scss */
 .history .history-content .gallery-block2 .owl-dots {
   position: absolute;
   bottom: 20px;
   right: 30px;
 }
-/* line 338, ../sass/history.scss */
+/* line 345, ../sass/history.scss */
 .history .history-content .gallery-block2 .owl-dot {
   display: inline-block;
   width: 12px;
@@ -399,15 +407,107 @@
   background: #F3B900;
   margin-right: 15px;
 }
-/* line 348, ../sass/history.scss */
+/* line 355, ../sass/history.scss */
 .history .history-content .gallery-block2 .owl-dot:last-child {
   margin-right: 0;
 }
-/* line 351, ../sass/history.scss */
+/* line 358, ../sass/history.scss */
 .history .history-content .gallery-block2 .owl-dot.active {
   background: #00A2D6;
 }
-/* line 356, ../sass/history.scss */
+/* line 363, ../sass/history.scss */
 .history .top_block .social {
   display: none;
+}
+
+@media screen and (max-width: 1150px) {
+  /* line 368, ../sass/history.scss */
+  .history .history-header .container_inner .social-wrap {
+    top: calc(100% + 20px);
+    right: auto;
+    left: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  /* line 378, ../sass/history.scss */
+  .history .history-header .container_inner .social-wrap a {
+    margin-right: 1px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  /* line 384, ../sass/history.scss */
+  .history .history-content .purple-wrap .purple-block {
+    margin-right: 0;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  /* line 390, ../sass/history.scss */
+  .container_inner {
+    padding: 0 20px;
+  }
+
+  /* line 393, ../sass/history.scss */
+  .history .history-content .only-img .h-t_caption {
+    padding: 0 20px;
+  }
+
+  /* line 396, ../sass/history.scss */
+  .history .history-header .container_inner .social-wrap {
+    left: 20px;
+  }
+
+  /* line 399, ../sass/history.scss */
+  .gallery-block {
+    margin: 0 -20px;
+    width: calc(100% + 40px);
+  }
+  /* line 402, ../sass/history.scss */
+  .gallery-block .h-t_caption {
+    padding: 0 20px;
+  }
+
+  /* line 406, ../sass/history.scss */
+  .history .history-content .slider_history .owl-dots {
+    top: 30px;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+    -moz-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    -o-transform: translateX(50%);
+    transform: translateX(50%);
+  }
+}
+@media screen and (max-width: 768px) {
+  /* line 417, ../sass/history.scss */
+  .history .history-content .h-t_with-imgR > div:nth-child(1),
+  .history .history-content .h-t_with-imgR > div:nth-child(2),
+  .history .history-content .h-t_with-imgL > div:nth-child(1),
+  .history .history-content .h-t_with-imgL > div:nth-child(2) {
+    width: 100%;
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  /* line 425, ../sass/history.scss */
+  .history .history-content .h-t_with-imgR > div:nth-child(2),
+  .history .history-content .h-t_with-imgL > div:nth-child(1) {
+    margin-right: -20px;
+    margin-left: -20px;
+    width: calc(100% + 40px);
+  }
+  /* line 430, ../sass/history.scss */
+  .history .history-content .h-t_with-imgR > div:nth-child(2) .h-t_caption,
+  .history .history-content .h-t_with-imgL > div:nth-child(1) .h-t_caption {
+    padding: 0 20px;
+  }
+
+  /* line 434, ../sass/history.scss */
+  .history .history-content .purple-wrap .purple-block {
+    padding: 20px 20px 20px 75px;
+  }
 }
