--- a/frontend/web/uw/sass/uw.scss
+++ b/frontend/web/uw/sass/uw.scss
@@ -50,12 +50,13 @@ body {
 			}
 		}
 		@media screen and (max-width: 999px) {
-			float: right;
-		    position: absolute;
-		    right: 29px;
-		    top: 34px;
-		    text-align: right;
-		    width: 119px;
+			float: none;
+			position: relative;
+			display: block;
+			right: 0;
+			text-align: center;
+			width: 100%;
+			top: 48px;
 		    a {
 		    	display: inline-block;
 		    	margin-bottom: 27px;
@@ -296,6 +297,15 @@ body {
 	background-size: 200px;
 }
 .jw-display-icon-container {
+	position: absolute !important;
+	top: 50% !important;
+	left: 50% !important;
+	-webkit-transform: translate(-50%,-50%);
+	-moz-transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%,-50%);
+	-o-transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+	margin: 0 !important;
 	background: transparent !important;
 	width: 130px !important;
 	height: 130px !important;
