--- a/frontend/web/uw/sass/history.scss
+++ b/frontend/web/uw/sass/history.scss
@@ -315,8 +315,8 @@
       }
       .owl-dots {
         position: absolute;
-        top: 82%;
         right: 30px;
+        bottom: 58px;
       }
       .owl-dot {
         display: inline-block;
